Thu Mar 17 09:45:43 UTC 2011  Olli Savia  <ops@iki.fi>

        * orbsvcs/tests/EC_Mcast/EC_Mcast.h:
        * orbsvcs/tests/EC_Mcast/EC_Mcast.cpp:
          Fixes due to ACE rand_r() changes.

Thu Mar 17 09:43:12 UTC 2011  Olli Savia  <ops@iki.fi>

        * orbsvcs/tests/Event/Basic/Observer.h:
        * orbsvcs/tests/Event/Basic/Observer.cpp:
          Fixes due to ACE rand_r() changes.

Thu Mar 17 09:36:47 UTC 2011  Olli Savia  <ops@iki.fi>

        * tests/OctetSeq/client.cpp:
          Fixes due to ACE rand_r() changes.

Thu Mar 17 09:35:07 UTC 2011  Olli Savia  <ops@iki.fi>

        * tests/Policies/Manipulation.cpp:
          Fixes due to ACE rand_r() changes.

Thu Mar 17 09:32:45 UTC 2011  Olli Savia  <ops@iki.fi>

        * tests/Nested_Upcall_Crash/Server_Peer.h:
        * tests/Nested_Upcall_Crash/Server_Peer.cpp:
        * tests/Nested_Upcall_Crash/server.cpp:
          Fixes due to ACE rand_r() changes.

Thu Mar 17 09:29:59 UTC 2011  Olli Savia  <ops@iki.fi>

        * tests/CDR/allocator.cpp:
          Fixes due to ACE rand_r() changes.

Thu Mar 17 08:19:02 UTC 2011  Olli Savia  <ops@iki.fi>

        * TAO_IDL/be/be_codegen.cpp:
          More fixes due to ACE rand_r() changes.

Thu Mar 17 08:12:47 UTC 2011  Olli Savia  <ops@iki.fi>

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_interface.cpp:
          Fixes due to ACE rand_r() changes.

Wed Mar 16 06:27:59 UTC 2011  Olli Savia  <ops@iki.fi>

        * orbsvcs/orbsvcs/LoadBalancing/LB_Random.cpp:
        * orbsvcs/tests/EC_Multiple/EC_Multiple.cpp:
          Check features against ACE_HAS_PTHREADS instead of
          ACE_HAS_PTHREADS_STD.

Mon Mar 14 20:17:48 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tests/RTCORBA/Priority_Inversion_With_Bands/server.cpp:
        * tests/RTCORBA/Bug_3643_Regression/server.cpp:
        * tests/RTCORBA/Thread_Pool/server.cpp:
        * tests/RTCORBA/Dynamic_Thread_Pool/server.cpp: